fix: small changes to overflow and other things

--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
 }
 
 .hotel-info__offer {
@@ -539,7 +539,7 @@ template {
 }
 
 .hotel-info__description {
-  margin: 5px 0;
+  margin: 3px 0;
 }
 
 .hotel-name {
@@ -590,6 +590,7 @@ template {
 .stars {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
+  line-height: 0;
 }
 
 .offer {
@@ -871,7 +872,9 @@ template {
 }
 
 .post-1__container {
-  padding: 47px 21px 30px 43px;
+  max-height: 495px;
+  overflow-y: auto;
+  padding: 47px 21px 23px 43px;
   color: #ffffff;
 }
 
@@ -892,7 +895,7 @@ template {
 }
 
 .post-1__contacts-one {
-  margin-top: 34px;
+  margin-top: 50px;
 }
 
 .post-1__contacts-two {
@@ -924,6 +927,7 @@ template {
 }
 
 .price-and-book__button {
+  margin-top: 19px;
   padding: 11px 27px 10px 26px;
   background: #EC1F46;
   border-radius: 4px;
@@ -960,6 +964,9 @@ template {
 }
 
 .post-2__container {
+  max-width: 350px;
+  max-height: 250px;
+  overflow-y: auto;
   padding: 30px 21px 25px 32px;
   color: #ffffff;
 }
@@ -1163,11 +1170,11 @@ template {
 }
 
 .swiper-button-next {
-  right: -151px;
+  right: -160px;
 }
 
 .swiper-button-prev {
-  left: -151px;
+  left: -160px;
 }
 
 .swiper-container-wrapper {
@@ -1188,7 +1195,7 @@ template {
   font-weight: 700;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 115px;
+  margin-bottom: 75px;
   margin-top: 40px;
 }
 
@@ -1355,7 +1362,7 @@ template {
       align-self: center;
   width: 136px;
   height: 22px;
-  margin-top: 100px;
+  margin-top: 90px;
 }
 
 .footer__disclaimer-and-others {
@@ -1382,7 +1389,7 @@ template {
   -ms-grid-row-span: 1;
   grid-row: 5/6;
   margin: auto;
-  margin-top: 100px;
+  margin-top: 90px;
 }
 
 .footer-wrapper {
@@ -1397,10 +1404,13 @@ template {
 }
 
 .footer__logo {
-  width: 166px;
+  width: 150px;
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .footer__categories {
@@ -1441,6 +1451,9 @@ template {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1 / 3;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .footer__ul {
@@ -1493,11 +1506,16 @@ template {
 .footer__text {
   color: #BDBDBD;
   margin-bottom: 20px;
-  margin-top: 34px;
+  margin-top: 20px;
 }
 
 .footer__contacts-form {
   grid-column: span 2;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-top: 13px;
+  margin-left: 10px;
 }
 
 .footer__input {
@@ -1561,6 +1579,11 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.footer__legal {
+  -ms-grid-column-align: end;
+      justify-self: end;
 }
 
 @media (max-width: 1200px) {
