--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -11,7 +11,7 @@
         align-self: center
         width: 136px
         height: 22px
-        margin-top: 100px
+        margin-top: 90px
     &__disclaimer-and-others
         height: 15px
         width: 283px
@@ -26,15 +26,16 @@
         grid-column: 1/5
         grid-row: 5/6
         margin: auto
-        margin-top: 100px
+        margin-top: 90px
     &-wrapper
         display: grid
         grid-template-columns: repeat(4, minmax(min-content, 1fr))
         grid-gap: 10px
         grid-auto-rows: minmax(40px, min-content)
     &__logo
-        width: 166px
+        width: 150px
         grid-row: 1 / 3
+        align-self: center
     &__categories
         grid-row: 1 / 4
     &__social
@@ -50,6 +51,7 @@
             justify-content: space-between
     &__contact-details
         grid-column: 1 / 3
+        align-self: center
     &__ul
         padding: 0
         list-style: none
@@ -80,9 +82,12 @@
     &__text
         color: $footer-text-color
         margin-bottom: 20px
-        margin-top: 34px
+        margin-top: 20px
     &__contacts-form
         grid-column: span 2
+        align-self: center
+        margin-top: 13px
+        margin-left: 10px
     &__input
         background-color: $light
         border-radius: 4px
@@ -127,3 +132,5 @@
         align-items: center
         flex-wrap: wrap
         justify-content: space-between
+    &__legal
+        justify-self: end
