--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -5,7 +5,7 @@
         display: flex
         align-items: center
         justify-content: space-between
-        padding-bottom: 20px
+        padding-bottom: 15px
         &__offer
             margin-left: 14px
             margin-top: 4px
@@ -13,7 +13,7 @@
             margin-top: 4px
             margin-bottom: 0
         &__description
-            margin: 5px 0
+            margin: 3px 0
     &-name
         font-size: 24px
         line-height: 30px
@@ -34,6 +34,7 @@
         justify-content: space-between
 .stars
     flex-basis: 100%
+    line-height: 0
 .offer
     padding: 4px 9px
     font-size: 10px
