--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -13,9 +13,9 @@
         height: 18px
         margin-top: -45px
         &-next
-            right: -151px
+            right: -160px
         &-prev
-            left: -151px
+            left: -160px
     &-container
         &-wrapper
             position: relative
@@ -31,7 +31,7 @@
     font-weight: 700
     text-transform: uppercase
     text-align: center
-    margin-bottom: 115px
+    margin-bottom: 75px
     margin-top: 40px
 .reviews
     &__text
